--- a/src/Canducci.MongoDB.Web/Views/Peoples/Create.cshtml
+++ b/src/Canducci.MongoDB.Web/Views/Peoples/Create.cshtml
@@ -1,21 +1,23 @@
 ﻿@model Web.Models.People
+<br />
 <form asp-action="Create" asp-controller="Peoples" method="post">
     @Html.AntiForgeryToken()
-    <div>
+    <div class="form-group">
         <label>Nome</label>
-        <input type="text" asp-for="Name" />
+        <input type="text" asp-for="Name" class="form-control"/>
     </div>
-    <div>
+    <div class="form-group">
         <label>Criado</label>
-        <input type="text" asp-for="Created" />
+        <input type="text" asp-for="Created" class="form-control"/>
     </div>
-    <div>
+    <div class="form-group">
         <label>Valor</label>
-        <input type="text" asp-for="Value" />
+        <input type="text" asp-for="Value" class="form-control"/>
     </div>
-    <div>
-        <label>Valor</label>
-        <input type="checkbox" asp-for="Active" />
+    <div class="form-group">
+        <label>Status</label>
+        <input type="checkbox" asp-for="Active" class="form-control"/>
     </div>
     <button type="submit" class="btn btn-primary">Criar</button>
+    <a asp-action="Index" asp-controller="Peoples" class="btn btn-info">Cancelar</a>
 </form>
