Namespace & New Version

--- a/src/Canducci.MongoDB.Web/Views/Peoples/Index.cshtml
+++ b/src/Canducci.MongoDB.Web/Views/Peoples/Index.cshtml
@@ -29,7 +29,7 @@
             <tr>
                 <td>@item.Id</td>
                 <td>@item.Name</td>
-                <td>@item.Created</td>
+                <td>@item.Created.ToString("dd/MM/yyyy")</td>
                 <td style="text-align:right">@item.Value.ToString("N2")</td>
                 <td>@item.Active</td>
                 <td>
